cmake_minimum_required(VERSION 3.14)
set(CMAKE_CXX_STANDARD 17)

add_subdirectory(account_link)
add_subdirectory(aggregate)
add_subdirectory(coresystem)
add_subdirectory(lock_hash)
add_subdirectory(lock_secret)
add_subdirectory(metadata)
#add_subdirectory(mosaic)
#add_subdirectory(multisig)
#add_subdirectory(namespace)
add_subdirectory(restriction_account)
add_subdirectory(restriction_mosaic)
add_subdirectory(transfer)


