cmake_minimum_required(VERSION 3.14)

#add_subdirectory(account_link)
add_subdirectory(aggregate)
#add_subdirectory(lock_hash)
#add_subdirectory(lock_secret)
#add_subdirectory(lock_shared)
#add_subdirectory(metadata)
add_subdirectory(mosaic)
#add_subdirectory(multisig)
add_subdirectory(namespace)
#add_subdirectory(restriction_account)
#add_subdirectory(restriction_mosaic)
#add_subdirectory(transfer)
